# ClassTopLand-Linux

./: CMakeLists.txt  README.md  main.cpp  res.qrc
qss/: CloudSettingsTab.qss  global.qss
res/: logo.txt
src/: API.h  CloudAPI.h
src/AppLog/: AppLog.cpp  AppLog.h
src/AppendixTableManager/: AppendixTableManager.cpp  AppendixTableManager.h  AppendixTableManager.ui
src/ClassEditDialog/: ClassEditDialog.cpp  ClassEditDialog.h  ClassEditDialog.ui
src/ClickLabel/: ClickLabel.cpp  ClickLabel.h
src/CloudSettingsTab/: CloudSettingsTab.cpp  CloudSettingsTab.h  CloudSettingsTab.ui
src/DayTimerWidget/: DayTimerWidget.cpp  DayTimerWidget.h  DayTimerWidget.ui
src/ExportAPISettingsTab/: ExportAPISettingsTab.cpp  ExportAPISettingsTab.h  ExportAPISettingsTab.ui
src/GetStartWidget/: GetStartWidget.cpp  GetStartWidget.h  GetStartWidget.ui
src/GlassHelper/: GlassHelper.cpp  GlassHelper.h
src/MainTableWidget/: MainTableWidget.cpp  MainTableWidget.h  MainTableWidget.ui
src/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/NetworkRequests/: NetworkRequests.cpp  NetworkRequests.h
src/PluginWebEngine/: PluginWebEngine.cpp  PluginWebEngine.h
src/RollingLabel/: RollingLabel.cpp  RollingLabel.h
src/SyncingDialog/: SyncingDialog.cpp  SyncingDialog.h  SyncingDialog.ui
src/TableEditWidget/: TableEditWidget.cpp  TableEditWidget.h  TableEditWidget.ui
src/ToolBox/: ToolBox.cpp  ToolBox.h  ToolBox.ui
src/Utils/: Utils.cpp  Utils.h
src/YiyanDialog/: YiyanDialog.cpp  YiyanDialog.h  YiyanDialog.ui
